--- a/domovra_dev/app/templates/settings.html
+++ b/domovra_dev/app/templates/settings.html
@@ -86,7 +86,7 @@
 
     /* si ton header change, ajuste ici */
     .tabs-dock {
-        position: sticky;
+        position: fixed;
         top: var(--header-h);
         /* 👈 s'accroche sous le header */
         z-index: 7;
